fix: typo error

--- a/real-time-data-with-llms/prompts-with-real-time-data.ipynb
+++ b/real-time-data-with-llms/prompts-with-real-time-data.ipynb
@@ -218,7 +218,7 @@
         "3. `my_count_feat_7d`: Number of transactions in the last 7 days (per account).\n",
         "4. `my_max_feat_7d`: Maximum transaction in the last 7 days (per account).\n",
         "\n",
-        "After creating them, we’ll **materialize** them so they’re available in the online store for real-time reads.**bold text**"
+        "After creating them, we’ll **materialize** them so they’re available in the online store for real-time reads."
       ]
     },
     {
