use new installer

--- a/effects-of-retraining/effects_of_retraining.ipynb
+++ b/effects-of-retraining/effects_of_retraining.ipynb
@@ -46,26 +46,8 @@
         }
       ],
       "source": [
-        "!git clone https://github.com/TurboML-Inc/colab-notebooks.git"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "f-E45b64l4q9",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f-E45b64l4q9",
-        "outputId": "b232086d-9332-4b95-c27f-7f254f0f4e7e"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install -q condacolab\n",
-        "import condacolab\n",
-        "condacolab.install()\n",
-        "!bash colab-notebooks/install_turboml.sh"
+        "!pip install turboml-installer \n",
+        "import turboml_installer ; turboml_installer.install_on_colab()"
       ]
     },
     {
@@ -92,8 +74,7 @@
         }
       ],
       "source": [
-        "! pip install -U kaleido\n",
-        "! pip install -U plotly"
+        "! pip install -U kaleido plotly"
       ]
     },
     {
@@ -122,16 +103,12 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import plotly.express as px\n",
         "import plotly.graph_objects as go\n",
         "import plotly.io as pio\n",
         "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score\n",
-        "from turboml import LocalModel\n",
         "from turboml.common.models import InputSpec\n",
-        "from turboml.common.dataloader import Inputs, Labels, PandasDataset\n",
+        "from turboml.common.dataloader import Inputs, Labels\n",
         "from tqdm import tqdm\n",
-        "import pickle\n",
         "\n",
         "pio.kaleido.scope.default_format = \"svg\""
       ]
