--- a/real-time-data-with-llms/prompts-with-real-time-data.ipynb
+++ b/real-time-data-with-llms/prompts-with-real-time-data.ipynb
@@ -21,10 +21,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZvOvOkU5PdFN"
+        "id": "yGTDXiy-PdFN"
       },
       "source": [
-        "Clone the repo with notebooks and corresponding data."
+        "Set up the environment and install TurboML's SDK."
       ]
     },
     {
@@ -39,58 +39,15 @@
       },
       "outputs": [],
       "source": [
-        "!git clone https://github.com/TurboML-Inc/colab-notebooks.git"
+        "!pip install turboml-installer \n",
+        "import turboml_installer ; turboml_installer.install_on_colab()"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "yGTDXiy-PdFN"
-      },
-      "source": [
-        "Set up the environment and install TurboML's SDK."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TE9IUJHHPdFN",
-        "outputId": "b0cfbeaf-ed15-4b19-bfee-5d19bbd4a2d6"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install -q condacolab\n",
-        "import condacolab\n",
-        "condacolab.install()\n",
-        "!bash colab-notebooks/install_turboml.sh"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "F2C83ut5PdFN"
-      },
+      "metadata": {},
       "source": [
         "The kernel should now be restarted with TurboML's SDK installed."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YDxTr3ElPdFO",
-        "outputId": "4f9ba072-3d9a-4b98-f95a-51131a89e86b"
-      },
-      "outputs": [],
-      "source": [
-        "cd colab-notebooks"
       ]
     },
     {
@@ -121,9 +78,6 @@
       "source": [
         "import pandas as pd\n",
         "import turboml as tb\n",
-        "from typing import List, Dict\n",
-        "import pandas as pd\n",
-        "from turboml.common.feature_engineering import retrieve_features\n",
         "\n",
         "#Initialize the TurboML platform\n",
         "tb.init(backend_url=BACKEND_URL, api_key=API_KEY)"
@@ -169,7 +123,7 @@
         "    transactions = tb.PandasDataset(\n",
         "        dataset_name=\"transactions_prompt\",\n",
         "        key_field=\"index\",\n",
-        "        dataframe=pd.read_csv(\"data/transactions.csv\").reset_index(),\n",
+        "        dataframe=pd.read_csv(\"https://raw.githubusercontent.com/TurboML-Inc/colab-notebooks/refs/heads/main/data/transactions.csv\").reset_index(),\n",
         "        upload=True,\n",
         "    )\n",
         "except:\n",
