--- a/real-time-streaming-data/streaming-anomaly-detection-stock-data.ipynb
+++ b/real-time-streaming-data/streaming-anomaly-detection-stock-data.ipynb
@@ -38,21 +38,8 @@
       },
       "outputs": [],
       "source": [
-        "!git clone https://github.com/TurboML-Inc/colab-notebooks.git"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "uWWBAr3jy2UQ"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install -q condacolab\n",
-        "import condacolab\n",
-        "condacolab.install()\n",
-        "!bash colab-notebooks/install_turboml.sh"
+        "!pip install turboml-installer \n",
+        "import turboml_installer ; turboml_installer.install_on_colab()"
       ]
     },
     {
@@ -77,10 +64,8 @@
         "import pandas as pd\n",
         "import requests\n",
         "import time\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from tqdm import tqdm\n",
-        "import json\n",
         "\n",
         "%matplotlib inline\n",
         "\n",
