--- a/why-incremental-stateful-algorithms/comparison_with_xgboost.ipynb
+++ b/why-incremental-stateful-algorithms/comparison_with_xgboost.ipynb
@@ -47,22 +47,8 @@
         }
       ],
       "source": [
-        "!git clone https://github.com/TurboML-Inc/colab-notebooks.git"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "mAiy-RNTIpDo",
-      "metadata": {
-        "id": "mAiy-RNTIpDo"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install -q condacolab\n",
-        "import condacolab\n",
-        "condacolab.install()\n",
-        "!bash colab-notebooks/install_turboml.sh"
+        "!pip install turboml-installer \n",
+        "import turboml_installer ; turboml_installer.install_on_colab()"
       ]
     },
     {
@@ -74,9 +60,7 @@
       },
       "outputs": [],
       "source": [
-        "! pip install -U xgboost\n",
-        "! pip install -U kaleido\n",
-        "! pip install -U plotly"
+        "! pip install -U xgboost kaleido plotly"
       ]
     },
     {
@@ -110,13 +94,11 @@
         "import pandas as pd\n",
         "import xgboost as xgb\n",
         "from tqdm import tqdm\n",
-        "import matplotlib.pyplot as plt\n",
         "import plotly.express as px\n",
         "import plotly.graph_objects as go\n",
         "import plotly.io as pio\n",
-        "from turboml import LocalModel\n",
         "from turboml.common.models import InputSpec\n",
-        "from turboml.common.dataloader import Inputs, Labels, PandasDataset\n",
+        "from turboml.common.dataloader import Inputs, Labels\n",
         "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score\n",
         "import warnings\n",
         "\n",
