refactor: rename feature store to platform and update examples

--- a/real-time-data-with-llms/prompts-with-real-time-data.ipynb
+++ b/real-time-data-with-llms/prompts-with-real-time-data.ipynb
@@ -9,12 +9,12 @@
         "# Real-time Data for LLMs\n",
         "This notebook demonstrates how to retrieve **real-time features** from TurboML and use them in **LLM prompts** for more **contextual** and **personalized** responses in real time.\n",
         "\n",
-        "### Why Feature Stores for LLMs?\n",
+        "### Why Feature Platforms for LLMs?\n",
         "- **Real-time personalization**: Many LLM tasks benefit from fresh data (e.g., user’s recent transactions, recent chat sentiment) to personalize outputs.\n",
-        "- **Low-latency data access**: Feature stores are built for **real-time** lookups, enabling you to insert up-to-date stats at inference time.\n",
-        "- **Consistency**: Feature stores unify offline and online features, ensuring the same definitions are used for analytics/batch and real-time inference.\n",
+        "- **Low-latency data access**: Feature platforms are built for **real-time** lookups, enabling you to insert up-to-date stats at inference time.\n",
+        "- **Consistency**: Feature platforms unify offline and online features, ensuring the same definitions are used for analytics/batch and real-time inference.\n",
         "\n",
-        "When combined with LLMs, feature stores enable a new paradigm of AI applications that can\n",
+        "When combined with LLMs, feature platforms enable a new paradigm of AI applications that can\n",
         "reason about current data while leveraging the powerful capabilities of language models."
       ]
     },
@@ -89,8 +89,8 @@
         "id": "iKu0p_tpVfHG"
       },
       "source": [
-        "## 2. Initialize Feature Store & Load Data\n",
-        "We’ll initialize a connection to our **TurboML** feature store, then upload a transactions dataset.\n",
+        "## 2. Initialize Feature Platform & Load Data\n",
+        "We’ll initialize a connection to our **TurboML** feature platform, then upload a transactions dataset.\n",
         "\n",
         "\n",
         "We'll use TurboML’s **push-based ingestion** approach by uploading the pandas DataFrame via **`tb.PandasDataset`**.  "
@@ -538,15 +538,29 @@
       },
       "outputs": [],
       "source": [
-        "# !pip install google-generativeai\n",
-        "# import google.generativeai as genai\n",
+        "# !%pip install --upgrade openai\n",
+        "# from openai import OpenAI\n",
         "\n",
-        "# genai.configure(api_key=\"YOUR_API_KEY\")  # Replace with your API key\n",
-        "# model = genai.GenerativeModel(model_name=\"gemini-1.5-flash\")\n",
+        "# ## Set the API key and model name\n",
+        "# MODEL=\"gpt-4o\"\n",
+        "# client = OpenAI(api_key=\"YOUR_API_KEY\")  # Replace with your API key\n",
         "\n",
         "# # Make the API call using the first prompt from your prompts_fraud list\n",
-        "# response = model.generate_content(prompts_fraud[0])\n",
-        "# print(\"LLM Response:\\n\", response.text)"
+        "# completion = client.chat.completions.create(\n",
+        "#     model=MODEL,\n",
+        "#     messages=[\n",
+        "#         {\n",
+        "#             \"role\": \"system\", \n",
+        "#             \"content\": \"You are a financial assistant. Help me assess the risk of fraud for this transaction.\"\n",
+        "#         },\n",
+        "#         {\n",
+        "#             \"role\": \"user\", \n",
+        "#             \"content\": prompts_fraud[0]\n",
+        "#         }\n",
+        "#     ],\n",
+        "#     max_tokens=150\n",
+        "# )\n",
+        "# print(\"Assistant:\", completion.choices[0].message.content)"
       ]
     },
     {
