fix: update dataset methods

--- a/benchmark-model-inferences/benchmark_model_inferences.ipynb
+++ b/benchmark-model-inferences/benchmark_model_inferences.ipynb
@@ -1596,18 +1596,18 @@
         "ieee_labels_df = ieee_dataset_train['EVENT_LABEL'].reset_index()\n",
         "\n",
         "\n",
-        "ieee_features = tb.PandasDataset(\n",
-        "  dataset_name=\"ieee_features\",\n",
+        "ieee_features = tb.OnlineDataset.from_pd(\n",
+        "  id=\"ieee_features\",\n",
+        "  df=ieee_features_df,\n",
         "  key_field=\"index\",\n",
-        "  dataframe=ieee_features_df,\n",
-        "  upload=True,\n",
+        "  load_if_exists=True\n",
         ")\n",
         "\n",
-        "ieee_labels = tb.PandasDataset(\n",
-        "  dataset_name=\"ieee_labels\",\n",
+        "ieee_labels = tb.OnlineDataset.from_pd(\n",
+        "  id=\"ieee_labels\",\n",
+        "  df=ieee_labels_df,\n",
         "  key_field=\"index\",\n",
-        "  dataframe=ieee_labels_df,\n",
-        "  upload=True,\n",
+        "  load_if_exists=True\n",
         ")"
       ]
     },
@@ -1636,8 +1636,8 @@
         "    \"v271\", \"v274\", \"v277\", \"v283\", \"v285\", \"v289\", \"v291\", \"v294\", \"id_01\", \"id_02\", \"id_05\", \"id_06\", \"id_09\",\n",
         "    \"id_13\", \"id_17\", \"id_19\", \"id_20\", \"devicetype\", \"deviceinfo\"\n",
         "]\n",
-        "features = ieee_features.get_input_fields(numerical_fields=numerical_fields)\n",
-        "label = ieee_labels.get_label_field(label_field=\"EVENT_LABEL\")"
+        "features = ieee_features.get_model_inputs(numerical_fields=numerical_fields)\n",
+        "label = ieee_labels.get_model_labels(label_field=\"EVENT_LABEL\")"
       ]
     },
     {
