--- a/real-time-streaming-data/streaming-anomaly-detection-stock-data.ipynb
+++ b/real-time-streaming-data/streaming-anomaly-detection-stock-data.ipynb
@@ -472,7 +472,7 @@
       },
       "source": [
         "## 3. Ingest Data into TurboML\n",
-        "We'll use TurboML’s **push-based ingestion** approach by uploading the pandas DataFrame via **`tb.PandasDataset`**.  \n",
+        "We'll use TurboML’s **push-based ingestion** approach by uploading the pandas DataFrame via **`tb.OnlineDataset`**.  \n",
         "We’ll name the dataset `finance_data_av`.  \n",
         "\n",
         "> **Note:** Since timestamps are unique to each minute in this dataset, we can use **`timestamp`** as the primary key for simplicity."
@@ -525,11 +525,11 @@
       "source": [
         "# Create a new dataset in TurboML\n",
         "# We'll assume you already have a TurboML instance running\n",
-        "finance_dataset = tb.PandasDataset(\n",
-        "    dataset_name=\"finance_data_av\",\n",
-        "    dataframe=df_fetched,\n",
+        "finance_dataset = tb.OnlineDataset.from_pd(\n",
+        "    id=\"finance_data_av\",\n",
+        "    df=df_fetched,\n",
         "    key_field=\"timestamp\",\n",
-        "    upload=True  # This actually uploads to TurboML\n",
+        "    load_if_exists=True\n",
         ")\n",
         "finance_dataset"
       ]
@@ -562,14 +562,14 @@
         "    \"dummy_label\": [0]*len(df_input)         # fill with zeros (or None)\n",
         "})\n",
         "#Upload to TurboML\n",
-        "dummy_label_dataset = tb.PandasDataset(\n",
-        "    dataset_name=\"dummy_label_dataset\",\n",
+        "dummy_label_dataset = tb.OnlineDataset.from_pd(\n",
+        "    id=\"dummy_label_dataset\",\n",
         "    key_field=\"timestamp\",\n",
-        "    dataframe=dummy_label_df,\n",
-        "    upload=True\n",
+        "    df=dummy_label_df,\n",
+        "    load_if_exists=True\n",
         ")\n",
         "#Get label field from dummy dataset\n",
-        "dummy_label_field = dummy_label_dataset.get_label_field(label_field=\"dummy_label\")"
+        "dummy_label_field = dummy_label_dataset.get_model_labels(label_field=\"dummy_label\")"
       ]
     },
     {
@@ -1082,7 +1082,7 @@
         "\n",
         "# Which fields from our dataset do we want to feed into the model?\n",
         "numerical_fields = [\"price\", \"volume\", \"price_volume_prod\", \"rolling_volume_1h\"]\n",
-        "model_inputs = finance_dataset.get_input_fields(numerical_fields=numerical_fields)\n",
+        "model_inputs = finance_dataset.get_model_inputs(numerical_fields=numerical_fields)\n",
         "\n",
         "# Deploy the model. (Unsupervised, labels are not needed but the topics needs to be in pipeline)\n",
         "deployed_rcf = rcf_model.deploy(\n",
