fix: remove deprecated methods

--- a/effects-of-retraining/effects_of_retraining.ipynb
+++ b/effects-of-retraining/effects_of_retraining.ipynb
@@ -107,7 +107,6 @@
         "import plotly.io as pio\n",
         "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score\n",
         "from turboml.common.models import InputSpec\n",
-        "from turboml.common.dataloader import Inputs, Labels\n",
         "from tqdm import tqdm\n",
         "\n",
         "pio.kaleido.scope.default_format = \"svg\""
@@ -1098,19 +1097,19 @@
       ],
       "source": [
         "# initial static model training\n",
-        "input_data = Inputs(\n",
-        "    dataset_id=\"input_stream\",\n",
-        "    dataframe=data_parts[0],\n",
-        "    key_field='index',\n",
-        "    numerical_fields=numerical_fields\n",
-        ")\n",
+        "input_data = tb.OnlineDataset.from_pd(\n",
+        "  id=\"input_stream_0\",\n",
+        "  df=data_parts[0],\n",
+        "  key_field=\"index\",\n",
+        "  load_if_exists=True\n",
+        ").get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "label_data = Labels(\n",
-        "    dataset_id=\"input_labels\",\n",
-        "    dataframe=label_parts[0],\n",
-        "    key_field='index',\n",
-        "    label_field='label'\n",
-        ")\n",
+        "label_data = tb.OnlineDataset.from_pd(\n",
+        "  id=\"input_labels_0\",\n",
+        "  df=label_parts[0],\n",
+        "  key_field=\"index\",\n",
+        "  load_if_exists=True\n",
+        ").get_model_labels(label_field='label')\n",
         "\n",
         "static_model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
         "static_model_local = static_model.to_local_model(input_spec)\n",
@@ -1126,18 +1125,19 @@
         "    df_part_ = data_parts[part_id_]\n",
         "    labels_part_ = label_parts[part_id_]\n",
         "\n",
-        "    input_data = Inputs(\n",
-        "        dataset_id=\"input_stream\",\n",
-        "        dataframe=df_part_,\n",
-        "        key_field='index',\n",
-        "        numerical_fields=numerical_fields\n",
-        "    )\n",
-        "    label_data = Labels(\n",
-        "        dataset_id=\"input_labels\",\n",
-        "        dataframe=labels_part_,\n",
-        "        key_field='index',\n",
-        "        label_field='label'\n",
-        "    )\n",
+        "    input_data = tb.OnlineDataset.from_pd(\n",
+        "        id=f\"input_stream_{part_id_}\",\n",
+        "        df=df_part_,\n",
+        "        key_field=\"index\",\n",
+        "        load_if_exists=True\n",
+        "    ).get_model_inputs(numerical_fields = numerical_fields)\n",
+        "\n",
+        "    label_data = tb.OnlineDataset.from_pd(\n",
+        "        id=f\"input_labels_{part_id_}\",\n",
+        "        df=labels_part_,\n",
+        "        key_field=\"index\",\n",
+        "        load_if_exists=True\n",
+        "    ).get_model_labels(label_field='label')\n",
         "\n",
         "    part_labels_df = labels_part_\n",
         "    all_labels.extend(part_labels_df['label'].tolist())\n",
@@ -1233,19 +1233,19 @@
       ],
       "source": [
         "# initial batch model training\n",
-        "input_data = Inputs(\n",
-        "    dataset_id=\"input_stream\",\n",
-        "    dataframe=data_parts[0],\n",
-        "    key_field='index',\n",
-        "    numerical_fields=numerical_fields\n",
-        ")\n",
+        "input_data = tb.OnlineDataset.from_pd(\n",
+        "  id=\"input_stream_0\",\n",
+        "  df=data_parts[0],\n",
+        "  key_field=\"index\",\n",
+        "  load_if_exists=True\n",
+        ").get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "label_data = Labels(\n",
-        "    dataset_id=\"input_labels\",\n",
-        "    dataframe=label_parts[0],\n",
-        "    key_field='index',\n",
-        "    label_field='label'\n",
-        ")\n",
+        "label_data = tb.OnlineDataset.from_pd(\n",
+        "  id=\"input_labels_0\",\n",
+        "  df=label_parts[0],\n",
+        "  key_field=\"index\",\n",
+        "  load_if_exists=True\n",
+        ").get_model_labels(label_field='label')\n",
         "\n",
         "batch_model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
         "batch_model_local = batch_model.to_local_model(input_spec)\n",
@@ -1261,19 +1261,19 @@
         "    df_part_ = data_parts[part_id_]\n",
         "    labels_part_ = label_parts[part_id_]\n",
         "\n",
-        "    input_data = Inputs(\n",
-        "        dataset_id=\"input_stream\",\n",
-        "        dataframe=df_part_,\n",
-        "        key_field='index',\n",
-        "        numerical_fields=numerical_fields\n",
-        "    )\n",
+        "    input_data = tb.OnlineDataset.from_pd(\n",
+        "        id=f\"input_stream_{part_id_}\",\n",
+        "        df=df_part_,\n",
+        "        key_field=\"index\",\n",
+        "        load_if_exists=True\n",
+        "    ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "    label_data = Labels(\n",
-        "        dataset_id=\"input_labels\",\n",
-        "        dataframe=labels_part_,\n",
-        "        key_field='index',\n",
-        "        label_field='label'\n",
-        "    )\n",
+        "    label_data = tb.OnlineDataset.from_pd(\n",
+        "        id=f\"input_labels_{part_id_}\",\n",
+        "        df=labels_part_,\n",
+        "        key_field=\"index\",\n",
+        "        load_if_exists=True\n",
+        "    ).get_model_labels(label_field='label')\n",
         "\n",
         "    part_labels_df = labels_part_\n",
         "    all_labels.extend(part_labels_df['label'].tolist())\n",
@@ -1379,19 +1379,19 @@
       ],
       "source": [
         "# initial batch model training\n",
-        "input_data = Inputs(\n",
-        "    dataset_id=\"input_stream\",\n",
-        "    dataframe=data_parts[0],\n",
-        "    key_field='index',\n",
-        "    numerical_fields=numerical_fields\n",
-        ")\n",
+        "input_data = tb.OnlineDataset.from_pd(\n",
+        "  id=\"input_stream_0\",\n",
+        "  df=data_parts[0],\n",
+        "  key_field=\"index\",\n",
+        "  load_if_exists=True\n",
+        ").get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "label_data = Labels(\n",
-        "    dataset_id=\"input_labels\",\n",
-        "    dataframe=label_parts[0],\n",
-        "    key_field='index',\n",
-        "    label_field='label'\n",
-        ")\n",
+        "label_data = tb.OnlineDataset.from_pd(\n",
+        "  id=\"input_labels_0\",\n",
+        "  df=label_parts[0],\n",
+        "  key_field=\"index\",\n",
+        "  load_if_exists=True\n",
+        ").get_model_labels(label_field='label')\n",
         "\n",
         "online_model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
         "online_model_local = online_model.to_local_model(input_spec)\n",
@@ -1413,19 +1413,20 @@
         "    end_idx = start_idx + ONLINE_TRAIN_STREAM_SIZE\n",
         "    batch_data = merged_data.iloc[start_idx:end_idx]\n",
         "    batch_labels = merged_labels.iloc[start_idx:end_idx]\n",
+        "    \n",
+        "    stream_data = tb.OnlineDataset.from_pd(\n",
+        "        id=f\"input_stream_{start_idx}_{end_idx}\",\n",
+        "        df=batch_data,\n",
+        "        key_field=\"index\",\n",
+        "        load_if_exists=True\n",
+        "    ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "    stream_data = Inputs(\n",
-        "        dataset_id=\"input_stream\",\n",
-        "        dataframe=batch_data,\n",
-        "        key_field='index',\n",
-        "        numerical_fields=numerical_fields\n",
-        "    )\n",
-        "    stream_labels = Labels(\n",
-        "        dataset_id=\"input_labels\",\n",
-        "        dataframe=batch_labels,\n",
-        "        key_field='index',\n",
-        "        label_field='label'\n",
-        "    )\n",
+        "    stream_labels = tb.OnlineDataset.from_pd(\n",
+        "        id=f\"input_labels_{start_idx}_{end_idx}\",\n",
+        "        df=batch_labels,\n",
+        "        key_field=\"index\",\n",
+        "        load_if_exists=True\n",
+        "    ).get_model_labels(label_field='label')\n",
         "\n",
         "    # Store predictions and labels\n",
         "    all_online_predictions.extend(online_model_local.predict(stream_data)['predicted_class'].tolist())\n",
@@ -1590,118 +1591,119 @@
       ],
       "source": [
         "def online_benchmarking(stream_size=1000, window_size=5000, step_size=1000):\n",
-        "  global data_parts, label_parts, numerical_fields, input_spec, NUM_CLASSES\n",
-        "  # initial batch model training\n",
-        "  input_data = Inputs(\n",
-        "      dataset_id=\"input_stream\",\n",
-        "      dataframe=data_parts[0],\n",
-        "      key_field='index',\n",
-        "      numerical_fields=numerical_fields\n",
-        "  )\n",
+        "    global data_parts, label_parts, numerical_fields, input_spec, NUM_CLASSES\n",
+        "    # initial batch model training\n",
+        "    input_data = tb.OnlineDataset.from_pd(\n",
+        "    id=\"input_stream_0\",\n",
+        "    df=data_parts[0],\n",
+        "    key_field=\"index\",\n",
+        "    load_if_exists=True\n",
+        "    ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "  label_data = Labels(\n",
-        "      dataset_id=\"input_labels\",\n",
-        "      dataframe=label_parts[0],\n",
-        "      key_field='index',\n",
-        "      label_field='label'\n",
-        "  )\n",
+        "    label_data = tb.OnlineDataset.from_pd(\n",
+        "    id=\"input_labels_0\",\n",
+        "    df=label_parts[0],\n",
+        "    key_field=\"index\",\n",
+        "    load_if_exists=True\n",
+        "    ).get_model_labels(label_field='label')\n",
         "\n",
-        "  model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
-        "  model_local = model.to_local_model(input_spec)\n",
+        "    model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
+        "    model_local = model.to_local_model(input_spec)\n",
         "\n",
-        "  model_local.learn(input_data, label_data)\n",
+        "    model_local.learn(input_data, label_data)\n",
         "\n",
-        "  # online model benchmarking\n",
-        "  all_online_predictions = []\n",
-        "  ONLINE_TRAIN_STREAM_SIZE = stream_size\n",
-        "  merged_data = pd.concat([data_parts[i].reset_index() for i in range(1, 10)], ignore_index=True)\n",
-        "  merged_labels = pd.concat([label_parts[i].reset_index() for i in range(1, 10)], ignore_index=True)\n",
-        "  num_batches = len(merged_data) // ONLINE_TRAIN_STREAM_SIZE\n",
+        "    # online model benchmarking\n",
+        "    all_online_predictions = []\n",
+        "    ONLINE_TRAIN_STREAM_SIZE = stream_size\n",
+        "    merged_data = pd.concat([data_parts[i].reset_index() for i in range(1, 10)], ignore_index=True)\n",
+        "    merged_labels = pd.concat([label_parts[i].reset_index() for i in range(1, 10)], ignore_index=True)\n",
+        "    num_batches = len(merged_data) // ONLINE_TRAIN_STREAM_SIZE\n",
         "\n",
-        "  all_online_labels = []\n",
+        "    all_online_labels = []\n",
         "\n",
-        "  for batch_index in tqdm(range(num_batches)):\n",
-        "      # Get the current batch of data and labels\n",
-        "      start_idx = batch_index * ONLINE_TRAIN_STREAM_SIZE\n",
-        "      end_idx = start_idx + ONLINE_TRAIN_STREAM_SIZE\n",
-        "      batch_data = merged_data.iloc[start_idx:end_idx]\n",
-        "      batch_labels = merged_labels.iloc[start_idx:end_idx]\n",
+        "    for batch_index in tqdm(range(num_batches)):\n",
+        "        # Get the current batch of data and labels\n",
+        "        start_idx = batch_index * ONLINE_TRAIN_STREAM_SIZE\n",
+        "        end_idx = start_idx + ONLINE_TRAIN_STREAM_SIZE\n",
+        "        batch_data = merged_data.iloc[start_idx:end_idx]\n",
+        "        batch_labels = merged_labels.iloc[start_idx:end_idx]\n",
+        "        \n",
+        "        stream_data = tb.OnlineDataset.from_pd(\n",
+        "            id=f\"input_stream_{start_idx}_{end_idx}\",\n",
+        "            df=batch_data,\n",
+        "            key_field=\"index\",\n",
+        "            load_if_exists=True\n",
+        "        ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "      stream_data = Inputs(\n",
-        "          dataset_id=\"input_stream\",\n",
-        "          dataframe=batch_data,\n",
-        "          key_field='index',\n",
-        "          numerical_fields=numerical_fields\n",
-        "      )\n",
-        "      stream_labels = Labels(\n",
-        "          dataset_id=\"input_labels\",\n",
-        "          dataframe=batch_labels,\n",
-        "          key_field='index',\n",
-        "          label_field='label'\n",
-        "      )\n",
+        "        stream_labels = tb.OnlineDataset.from_pd(\n",
+        "            id=f\"input_labels_{start_idx}_{end_idx}\",\n",
+        "            df=batch_labels,\n",
+        "            key_field=\"index\",\n",
+        "            load_if_exists=True\n",
+        "        ).get_model_labels(label_field='label')\n",
         "\n",
-        "      # Store predictions and labels\n",
-        "      all_online_predictions.extend(model_local.predict(stream_data)['predicted_class'].tolist())\n",
-        "      all_online_labels.extend(batch_labels['label'].tolist())\n",
+        "        # Store predictions and labels\n",
+        "        all_online_predictions.extend(model_local.predict(stream_data)['predicted_class'].tolist())\n",
+        "        all_online_labels.extend(batch_labels['label'].tolist())\n",
         "\n",
-        "      # Update the model with the current small batch(stream) (online learning)\n",
-        "      model_local.learn(stream_data, stream_labels)\n",
+        "        # Update the model with the current small batch(stream) (online learning)\n",
+        "        model_local.learn(stream_data, stream_labels)\n",
         "\n",
-        "  merged_online_predictions = pd.DataFrame({'predicted_class': all_online_predictions})\n",
-        "  merged_online_labels = pd.DataFrame({'label': all_online_labels})\n",
+        "    merged_online_predictions = pd.DataFrame({'predicted_class': all_online_predictions})\n",
+        "    merged_online_labels = pd.DataFrame({'label': all_online_labels})\n",
         "\n",
-        "  windowed_metrics_static = calculate_windowed_metric(\n",
-        "      merged_static_predictions['predicted_class'],\n",
-        "      merged_labels['label'],\n",
-        "      window_size=5000,\n",
-        "      step_size=1000,\n",
-        "      metric='accuracy'\n",
-        "  )\n",
+        "    windowed_metrics_static = calculate_windowed_metric(\n",
+        "        merged_static_predictions['predicted_class'],\n",
+        "        merged_labels['label'],\n",
+        "        window_size=5000,\n",
+        "        step_size=1000,\n",
+        "        metric='accuracy'\n",
+        "    )\n",
         "\n",
-        "  windowed_metrics_batch = calculate_windowed_metric(\n",
-        "      merged_batch_predictions['predicted_class'],\n",
-        "      merged_batch_labels['label'],\n",
-        "      window_size=5000,\n",
-        "      step_size=1000,\n",
-        "      metric='accuracy'\n",
-        "  )\n",
+        "    windowed_metrics_batch = calculate_windowed_metric(\n",
+        "        merged_batch_predictions['predicted_class'],\n",
+        "        merged_batch_labels['label'],\n",
+        "        window_size=5000,\n",
+        "        step_size=1000,\n",
+        "        metric='accuracy'\n",
+        "    )\n",
         "\n",
-        "  windowed_metrics_online = calculate_windowed_metric(\n",
-        "      merged_online_predictions['predicted_class'],\n",
-        "      merged_online_labels['label'],\n",
-        "      window_size=5000,\n",
-        "      step_size=1000,\n",
-        "      metric='accuracy'\n",
-        "  )\n",
+        "    windowed_metrics_online = calculate_windowed_metric(\n",
+        "        merged_online_predictions['predicted_class'],\n",
+        "        merged_online_labels['label'],\n",
+        "        window_size=5000,\n",
+        "        step_size=1000,\n",
+        "        metric='accuracy'\n",
+        "    )\n",
         "\n",
-        "  fig = go.Figure()\n",
+        "    fig = go.Figure()\n",
         "\n",
-        "  fig.add_trace(go.Scatter(\n",
-        "      y=windowed_metrics_static,\n",
-        "      mode='lines',\n",
-        "      name=f'ACC Static : (Window {window_size}, Step {step_size})'\n",
-        "  ))\n",
-        "  fig.add_trace(go.Scatter(\n",
-        "      y=windowed_metrics_batch,\n",
-        "      mode='lines',\n",
-        "      name=f'ACC Batch : (Window {window_size}, Step {step_size})'\n",
-        "  ))\n",
-        "  fig.add_trace(go.Scatter(\n",
-        "      y=windowed_metrics_online,\n",
-        "      mode='lines',\n",
-        "      name=f'ACC Online : (Window {window_size}, Step {step_size})'\n",
-        "  ))\n",
+        "    fig.add_trace(go.Scatter(\n",
+        "        y=windowed_metrics_static,\n",
+        "        mode='lines',\n",
+        "        name=f'ACC Static : (Window {window_size}, Step {step_size})'\n",
+        "    ))\n",
+        "    fig.add_trace(go.Scatter(\n",
+        "        y=windowed_metrics_batch,\n",
+        "        mode='lines',\n",
+        "        name=f'ACC Batch : (Window {window_size}, Step {step_size})'\n",
+        "    ))\n",
+        "    fig.add_trace(go.Scatter(\n",
+        "        y=windowed_metrics_online,\n",
+        "        mode='lines',\n",
+        "        name=f'ACC Online : (Window {window_size}, Step {step_size})'\n",
+        "    ))\n",
         "\n",
-        "  fig.update_layout(\n",
-        "      title='Windowed Accuracy',\n",
-        "      xaxis_title='Window Start Index',\n",
-        "      yaxis_title='Metric Score',\n",
-        "      showlegend=True,\n",
-        "      xaxis=dict(showgrid=True),\n",
-        "      yaxis=dict(showgrid=True)\n",
-        "  )\n",
+        "    fig.update_layout(\n",
+        "        title='Windowed Accuracy',\n",
+        "        xaxis_title='Window Start Index',\n",
+        "        yaxis_title='Metric Score',\n",
+        "        showlegend=True,\n",
+        "        xaxis=dict(showgrid=True),\n",
+        "        yaxis=dict(showgrid=True)\n",
+        "    )\n",
         "\n",
-        "  fig.show(\"svg\")\n",
+        "    fig.show(\"svg\")\n",
         "\n",
         "# you can use the above function to try out the online model with different stream sizes, window_size and step_size\n",
         "online_benchmarking(stream_size=100, window_size=500, step_size=100)"
