--- a/why-incremental-stateful-algorithms/comparison_with_xgboost.ipynb
+++ b/why-incremental-stateful-algorithms/comparison_with_xgboost.ipynb
@@ -98,7 +98,6 @@
         "import plotly.graph_objects as go\n",
         "import plotly.io as pio\n",
         "from turboml.common.models import InputSpec\n",
-        "from turboml.common.dataloader import Inputs, Labels\n",
         "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score\n",
         "import warnings\n",
         "\n",
@@ -1069,128 +1068,129 @@
         "    'colsample_bytree': 0.8\n",
         "}\n",
         "\n",
-        "def benchmark_and_store_results(batch_size, xgb_params)\n",
-        "  # initial online model training\n",
-        "  input_data = Inputs(\n",
-        "      dataset_id=\"input_stream\",\n",
-        "      dataframe=data_parts[0],\n",
-        "      key_field='index',\n",
-        "      numerical_fields=numerical_fields\n",
-        "  )\n",
+        "def benchmark_and_store_results(batch_size, xgb_params):\n",
+        "    # initial online model training\n",
+        "    input_data = tb.OnlineDataset.from_pd(\n",
+        "        id=\"input_stream_0\",\n",
+        "        df=data_parts[0],\n",
+        "        key_field=\"index\",\n",
+        "        load_if_exists=True\n",
+        "    ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "  label_data = Labels(\n",
-        "      dataset_id=\"input_labels\",\n",
-        "      dataframe=label_parts[0],\n",
-        "      key_field='index',\n",
-        "      label_field='label'\n",
-        "  )\n",
+        "    label_data = tb.OnlineDataset.from_pd(\n",
+        "        id=\"input_labels_0\",\n",
+        "        df=label_parts[0],\n",
+        "        key_field=\"index\",\n",
+        "        load_if_exists=True\n",
+        "    ).get_model_labels(label_field='label')\n",
+        "    \n",
+        "    online_model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
+        "    online_model_local = online_model.to_local_model(input_spec)\n",
+        "    online_model_local.learn(input_data, label_data)\n",
         "\n",
-        "  online_model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
-        "  online_model_local = online_model.to_local_model(input_spec)\n",
-        "  online_model_local.learn(input_data, label_data)\n",
+        "    # merging the newer data other than the one used for making the initial trained version of the online model\n",
+        "    merged_data = pd.concat([data_parts[i].reset_index() for i in range(1, 10)], ignore_index=True)\n",
+        "    merged_labels = pd.concat([label_parts[i].reset_index() for i in range(1, 10)], ignore_index=True)\n",
         "\n",
-        "  # merging the newer data other than the one used for making the initial trained version of the online model\n",
-        "  merged_data = pd.concat([data_parts[i].reset_index() for i in range(1, 10)], ignore_index=True)\n",
-        "  merged_labels = pd.concat([label_parts[i].reset_index() for i in range(1, 10)], ignore_index=True)\n",
+        "    BATCH_SIZE = batch_size\n",
+        "    XGB_PARAMS = xgb_params\n",
         "\n",
-        "  BATCH_SIZE = batch_size\n",
-        "  XGB_PARAMS = xgb_params\n",
+        "    num_batches = len(merged_data) // BATCH_SIZE\n",
         "\n",
-        "  num_batches = len(merged_data) // BATCH_SIZE\n",
+        "    # Initialize variables\n",
+        "    non_incremental_accuracies = []\n",
+        "    incremental_accuracies = []\n",
+        "    data_points_processed = []\n",
         "\n",
-        "  # Initialize variables\n",
-        "  non_incremental_accuracies = []\n",
-        "  incremental_accuracies = []\n",
-        "  data_points_processed = []\n",
+        "    incremental_predictions_all = []\n",
+        "    non_incremental_predictions_all = []\n",
+        "    gt_labels_all = []\n",
         "\n",
-        "  incremental_predictions_all = []\n",
-        "  non_incremental_predictions_all = []\n",
-        "  gt_labels_all = []\n",
+        "    # Track training times and memory usage\n",
+        "    training_time_online = 0\n",
+        "    training_time_xgb = 0\n",
+        "    memory_usage_online = []\n",
+        "    memory_usage_xgb = []\n",
         "\n",
-        "  # Track training times and memory usage\n",
-        "  training_time_online = 0\n",
-        "  training_time_xgb = 0\n",
-        "  memory_usage_online = []\n",
-        "  memory_usage_xgb = []\n",
+        "    # Initialize tb model\n",
+        "    all_data = pd.DataFrame(columns=merged_data.columns)\n",
+        "    all_data = all_data.drop(columns=['index'], errors='ignore')\n",
+        "    all_labels = np.array([])\n",
         "\n",
-        "  # Initialize tb model\n",
-        "  all_data = pd.DataFrame(columns=merged_data.columns)\n",
-        "  all_data = all_data.drop(columns=['index'], errors='ignore')\n",
-        "  all_labels = np.array([])\n",
+        "    # Start training with streaming data\n",
+        "    for start_idx in tqdm(range(0, len(merged_data), BATCH_SIZE)):\n",
+        "        # if start_idx % 5 == 0:\n",
+        "        #     print(f\"{start_idx}/{len(merged_data)} processed...\")\n",
+        "        end_idx = start_idx + BATCH_SIZE\n",
+        "        if end_idx > len(merged_data):\n",
+        "            break\n",
         "\n",
-        "  # Start training with streaming data\n",
-        "  for start_idx in tqdm(range(0, len(merged_data), BATCH_SIZE)):\n",
-        "      # if start_idx % 5 == 0:\n",
-        "      #     print(f\"{start_idx}/{len(merged_data)} processed...\")\n",
-        "      end_idx = start_idx + BATCH_SIZE\n",
-        "      if end_idx > len(merged_data):\n",
-        "          break\n",
+        "        batch_data = merged_data.iloc[start_idx:end_idx]\n",
+        "        batch_labels = merged_labels.iloc[start_idx:end_idx].squeeze()\n",
         "\n",
-        "      batch_data = merged_data.iloc[start_idx:end_idx]\n",
-        "      batch_labels = merged_labels.iloc[start_idx:end_idx].squeeze()\n",
+        "        # Incremental Learning with tb model\n",
+        "        input_data = tb.OnlineDataset.from_pd(\n",
+        "            id=f\"input_stream_{end_idx}\",\n",
+        "            df=batch_data,\n",
+        "            key_field=\"index\",\n",
+        "            load_if_exists=True\n",
+        "        ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "      # Incremental Learning with tb model\n",
-        "      input_data = Inputs(\n",
-        "          dataset_id=\"input_stream\",\n",
-        "          dataframe=batch_data,\n",
-        "          key_field='index',\n",
-        "          numerical_fields=numerical_fields\n",
-        "      )\n",
-        "      label_data = Labels(\n",
-        "          dataset_id=\"input_labels\",\n",
-        "          dataframe=batch_labels,\n",
-        "          key_field='index',\n",
-        "          label_field='label'\n",
-        "      )\n",
+        "        label_data = tb.OnlineDataset.from_pd(\n",
+        "            id=f\"input_labels_{end_idx}\",\n",
+        "            df=batch_labels,\n",
+        "            key_field=\"index\",\n",
+        "            load_if_exists=True\n",
+        "        ).get_model_labels(label_field='label')\n",
         "\n",
-        "      start_time_online = time.time()\n",
-        "      out = online_model_local.predict(input_data)\n",
-        "      incremental_accuracy = accuracy_score(batch_labels['label'].values, out['predicted_class'])\n",
-        "      training_time_online += time.time() - start_time_online\n",
-        "      incremental_accuracies.append(incremental_accuracy)\n",
+        "        start_time_online = time.time()\n",
+        "        out = online_model_local.predict(input_data)\n",
+        "        incremental_accuracy = accuracy_score(batch_labels['label'].values, out['predicted_class'])\n",
+        "        training_time_online += time.time() - start_time_online\n",
+        "        incremental_accuracies.append(incremental_accuracy)\n",
         "\n",
-        "      incremental_predictions_all.extend(out['predicted_class'].tolist())\n",
-        "      gt_labels_all.extend(batch_labels['label'].values)\n",
-        "      online_model_local.learn(input_data, label_data)\n",
+        "        incremental_predictions_all.extend(out['predicted_class'].tolist())\n",
+        "        gt_labels_all.extend(batch_labels['label'].values)\n",
+        "        online_model_local.learn(input_data, label_data)\n",
         "\n",
-        "      # Update full data\n",
-        "      batch_data = batch_data.drop(columns=['index'], errors='ignore')\n",
-        "      all_data = pd.concat([all_data, batch_data], ignore_index=True)\n",
-        "      all_labels = np.concatenate([all_labels, batch_labels['label'].astype(int).values])\n",
+        "        # Update full data\n",
+        "        batch_data = batch_data.drop(columns=['index'], errors='ignore')\n",
+        "        all_data = pd.concat([all_data, batch_data], ignore_index=True)\n",
+        "        all_labels = np.concatenate([all_labels, batch_labels['label'].astype(int).values])\n",
         "\n",
-        "      # Track memory usage\n",
-        "      memory_usage_online.append(sys.getsizeof(batch_data) + sys.getsizeof(batch_labels))\n",
-        "      memory_usage_xgb.append(sys.getsizeof(all_data) + sys.getsizeof(all_labels))\n",
+        "        # Track memory usage\n",
+        "        memory_usage_online.append(sys.getsizeof(batch_data) + sys.getsizeof(batch_labels))\n",
+        "        memory_usage_xgb.append(sys.getsizeof(all_data) + sys.getsizeof(all_labels))\n",
         "\n",
-        "      # Non-Incremental Learning (XGBoost)\n",
-        "      all_data = all_data.drop(columns=['level_0'], errors='ignore')\n",
-        "      dtrain_full = xgb.DMatrix(all_data, label=all_labels, enable_categorical=True)\n",
-        "      start_time_xgb = time.time()\n",
-        "      xgb_model = xgb.train(XGB_PARAMS, dtrain_full, num_boost_round=100)\n",
-        "      training_time_xgb += time.time() - start_time_xgb\n",
+        "        # Non-Incremental Learning (XGBoost)\n",
+        "        all_data = all_data.drop(columns=['level_0'], errors='ignore')\n",
+        "        dtrain_full = xgb.DMatrix(all_data, label=all_labels, enable_categorical=True)\n",
+        "        start_time_xgb = time.time()\n",
+        "        xgb_model = xgb.train(XGB_PARAMS, dtrain_full, num_boost_round=100)\n",
+        "        training_time_xgb += time.time() - start_time_xgb\n",
         "\n",
-        "      batch_data = batch_data.drop(columns=['level_0'], errors='ignore')\n",
-        "      dtest = xgb.DMatrix(batch_data)\n",
-        "      non_incremental_predictions = xgb_model.predict(dtest).argmax(axis=1)\n",
-        "      non_incremental_accuracy = accuracy_score(batch_labels['label'].values, non_incremental_predictions)\n",
-        "      non_incremental_accuracies.append(non_incremental_accuracy)\n",
+        "        batch_data = batch_data.drop(columns=['level_0'], errors='ignore')\n",
+        "        dtest = xgb.DMatrix(batch_data)\n",
+        "        non_incremental_predictions = xgb_model.predict(dtest).argmax(axis=1)\n",
+        "        non_incremental_accuracy = accuracy_score(batch_labels['label'].values, non_incremental_predictions)\n",
+        "        non_incremental_accuracies.append(non_incremental_accuracy)\n",
         "\n",
-        "      non_incremental_predictions_all.extend(non_incremental_predictions)\n",
-        "      data_points_processed.append(len(all_labels))\n",
+        "        non_incremental_predictions_all.extend(non_incremental_predictions)\n",
+        "        data_points_processed.append(len(all_labels))\n",
         "\n",
-        "  # Save results for analysis\n",
-        "  with open('comparison_measures.pkl', 'wb') as f:\n",
-        "      pickle.dump({\n",
-        "          'incremental_accuracies': incremental_accuracies,\n",
-        "          'non_incremental_accuracies': non_incremental_accuracies,\n",
-        "          'data_points_processed': data_points_processed,\n",
-        "          'training_time_online': training_time_online,\n",
-        "          'training_time_xgb': training_time_xgb,\n",
-        "          'memory_usage_online': memory_usage_online,\n",
-        "          'memory_usage_xgb': memory_usage_xgb\n",
-        "      }, f)\n",
+        "    # Save results for analysis\n",
+        "    with open('comparison_measures.pkl', 'wb') as f:\n",
+        "        pickle.dump({\n",
+        "            'incremental_accuracies': incremental_accuracies,\n",
+        "            'non_incremental_accuracies': non_incremental_accuracies,\n",
+        "            'data_points_processed': data_points_processed,\n",
+        "            'training_time_online': training_time_online,\n",
+        "            'training_time_xgb': training_time_xgb,\n",
+        "            'memory_usage_online': memory_usage_online,\n",
+        "            'memory_usage_xgb': memory_usage_xgb\n",
+        "        }, f)\n",
         "\n",
-        "  print(\"function run complete and results stored...\")\n",
+        "    print(\"function run complete and results stored...\")\n",
         "\n",
         "benchmark_and_store_results(BATCH_SIZE, XGB_PARAMS)"
       ]
